order dependent assignments